[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "api-client"
version = "0.4.0"
description = "A lightweight Python library for making HTTP requests against REST APIs."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jez Hailwood" },
]
dependencies = ["requests"]

[project.urls]
Documentation = "https://jezhailwood.github.io/api-client"
Repository = "https://github.com/jezhailwood/api-client"
Issues = "https://github.com/jezhailwood/api-client/issues"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "D", # pydocstyle
    "D401", # pydocstyle: non-imperative-mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
